# rime-llm-rerank

./: .gitattributes  .gitignore  CLAUDE.md  README.md  schema-patch.yaml
common/: llm_context.lua  llm_rerank.lua
cpp/: CMakeLists.txt  analyze_tokens.cpp  bench_latency.cpp  bench_single_char.cpp  bench_sweep2.cpp  bench_sweep_2b.cpp  bench_thr.cpp  bench_thr_cand.cpp  bench_train.cpp  rime_llm.cpp  rime_llm_cuda.cpp  test_core.cpp
cpp/dev/: CMakeLists.txt  README.md  bench_batch.cpp  build_bench.bat  deploy.bat  rebuild.bat  rime_llm.cpp
dev/: LLM服务使用说明.md  bench_configs.py  bench_parallel_mp.py  bench_tok_cand.py  eval_and_analyze.py  rime_pipe.c  sync.ps1
lua/: llm_context.lua  llm_rerank.lua
python/: analyze_corpus.py  prep_samples.py  prep_training.py  run_tests.py
python/dev/: eval_and_analyze.py
python/user/: pipe_server.py
server/: README.md  pipe_server.py  setup.bat  setup.ps1  start_server.bat  stop_server.bat
user/: llm_context.lua  llm_filter.lua  llm_off.bat  llm_on.bat  llm_processor.lua  llm_rerank.lua
